# 3d-guitar-amp-renderer

./: .gitignore  .gitmodules  .tasks  .vimspector.json  AzimuthDialLookAndFeel.cpp  AzimuthDialLookAndFeel.h  BufferTransfer.h  CMakeLists.txt  Convolver.cpp  Convolver.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  create_drir_sofa.py  create_drir_sofa_for_test.py
.github/workflows/: cmake.yml
Source/: Convolver.cpp  Convolver.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
data/: fullerene_polar.npy
include/libsofa/src/: SOFAFile.cpp
include/unsupported/Eigen/: FFT
lib/fftw-3.3.8/: libfftw3.dylib  libfftw3_mpi.3.dylib  libfftw3_omp.dylib  libfftw3_threads.3.dylib  libfftw3f.3.dylib  libfftw3f_mpi.dylib  libfftw3f_omp.3.dylib  libfftw3f_threads.dylib  libfftw3l.dylib  libfftw3l_mpi.3.dylib  libfftw3l_omp.dylib  libfftw3l_threads.dylib
src/: io.hpp  main.cpp  processor.hpp
src/BinauralRenderer/: BinauralIRRenderer.cpp  BinauralIRRenderer.hpp  CMakelists.txt  SphUtils.cpp  SphUtils.hpp
src/SofaReader/: CMakeLists.txt  DRIRSofaReader.cpp  DRIRSofaReader.hpp  HRIRSofaReader.cpp  HRIRSofaReader.hpp  SofaReader.cpp  SofaReader.hpp
test/: CMakeLists.txt
test/BinauralRenderer/: BinauralIRRendererTest.cpp  CMakelists.txt  SphUtilsTest.cpp
test/SofaReader/: CMakeLists.txt
test/SofaReader/DRIRSofaReader/: CMakeLists.txt  DRIRSofaReaderTest.cpp
test/SofaReader/HRIRSofaReader/: CMakeLists.txt  HRIRSofaReaderTest.cpp
test/SofaReader/SofaReader/: SofaReaderTest.cpp
test/scripts/: sph_mtx_data.py
tests/: CMakeLists.txt
tests/SofaReader/: CMakeLists.txt
tests/SofaReader/HRIRSofaReader/: HRIRSofaReaderTest.cpp
tests/SofaReader/SofaReader/: CMakeLists.txt  SofaReaderTest.cpp
xcode_build/: CMakeCache.txt  cmake_install.cmake
xcode_build/AUDIO_PLUGIN_EXAMPLE.build/Debug/AudioPluginExample.build/: dgph
xcode_build/AUDIO_PLUGIN_EXAMPLE.build/Debug/AudioPluginExample.build/Objects-normal/x86_64/: Audio Plugin Example_SharedCode.LinkFileList  PluginEditor.d  PluginProcessor.d  juce_audio_basics.d  juce_audio_devices.d  juce_audio_formats.d  juce_audio_plugin_client_utils.d  juce_audio_processors.d  juce_audio_utils.d  juce_core.d  juce_data_structures.d  juce_events.d  juce_graphics.d  juce_gui_basics.d  juce_gui_extra.d  test.d
xcode_build/AUDIO_PLUGIN_EXAMPLE.build/Debug/AudioPluginExample_AU.build/: Script-F1752FF7A2874E8DBF74BE5D.sh  Script-F53AF8934BBD4D56B079C76F.sh
xcode_build/AUDIO_PLUGIN_EXAMPLE.build/Debug/AudioPluginExample_AU.build/Objects-normal/x86_64/: Audio Plugin Example.LinkFileList
xcode_build/AUDIO_PLUGIN_EXAMPLE.build/Debug/AudioPluginExample_Standalone.build/: Script-BF96261CB7B546C4A8ED5E82.sh  Script-EBA0C87ABDF548648C68674A.sh  dgph
xcode_build/AUDIO_PLUGIN_EXAMPLE.build/Debug/AudioPluginExample_Standalone.build/Objects-normal/x86_64/: Audio Plugin Example.LinkFileList
xcode_build/AUDIO_PLUGIN_EXAMPLE.build/Debug/AudioPluginExample_VST3.build/: Script-21E1BEBB523D4FF6B2C9473F.sh  Script-E3C308D173B540FA87907222.sh
xcode_build/AUDIO_PLUGIN_EXAMPLE.build/Debug/ZERO_CHECK.build/: Script-2541FEAA23E745B19A88D438.sh  dgph  dgph~
xcode_build/AUDIO_PLUGIN_EXAMPLE.xcodeproj/: project.pbxproj
xcode_build/AUDIO_PLUGIN_EXAMPLE.xcodeproj/project.xcworkspace/xcuserdata/kazumawatanabe.xcuserdatad/: UserInterfaceState.xcuserstate
xcode_build/AUDIO_PLUGIN_EXAMPLE.xcodeproj/xcshareddata/xcschemes/: AudioPluginExample.xcscheme
xcode_build/AUDIO_PLUGIN_EXAMPLE.xcodeproj/xcuserdata/kazumawatanabe.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode_build/AudioPluginExample_artefacts/JuceLibraryCode/: Info.txt
xcode_build/AudioPluginExample_artefacts/JuceLibraryCode/AudioPluginExample_AU/: Info.plist
xcode_build/AudioPluginExample_artefacts/JuceLibraryCode/AudioPluginExample_Standalone/: Info.plist
xcode_build/AudioPluginExample_artefacts/JuceLibraryCode/AudioPluginExample_VST3/: Info.plist
xcode_build/AudioPluginExample_artefacts/JuceLibraryCode/Debug/: Defs.txt
xcode_build/AudioPluginExample_artefacts/JuceLibraryCode/MinSizeRel/: Defs.txt
xcode_build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  AudioPluginExample_AU_cmakeRulesBuildPhase.makeDebug  AudioPluginExample_AU_cmakeRulesBuildPhase.makeMinSizeRel  AudioPluginExample_AU_cmakeRulesBuildPhase.makeRelWithDebInfo  AudioPluginExample_AU_cmakeRulesBuildPhase.makeRelease  AudioPluginExample_AU_postBuildPhase.makeDebug  AudioPluginExample_AU_postBuildPhase.makeMinSizeRel  AudioPluginExample_AU_postBuildPhase.makeRelWithDebInfo  AudioPluginExample_AU_postBuildPhase.makeRelease  AudioPluginExample_Standalone_cmakeRulesBuildPhase.makeRelease  AudioPluginExample_Standalone_postBuildPhase.makeDebug  AudioPluginExample_Standalone_postBuildPhase.makeMinSizeRel  AudioPluginExample_Standalone_postBuildPhase.makeRelWithDebInfo  AudioPluginExample_Standalone_postBuildPhase.makeRelease  AudioPluginExample_VST3_cmakeRulesBuildPhase.makeMinSizeRel  AudioPluginExample_VST3_postBuildPhase.makeDebug  AudioPluginExample_VST3_postBuildPhase.makeMinSizeRel  AudioPluginExample_VST3_postBuildPhase.makeRelWithDebInfo  AudioPluginExample_VST3_postBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  install_postBuildPhase.makeMinSizeRel
xcode_build/JUCE/: JUCEConfig.cmake  JUCEExportConfig.cmake  cmake_install.cmake
xcode_build/JUCE/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
xcode_build/JUCE/JUCE.xcodeproj/: project.pbxproj
xcode_build/JUCE/tools/: CMakeCache.txt  JUCEConfig.cmake  JUCEConfigVersion.cmake  JUCEExportConfig.cmake  JUCEToolsExport.cmake  cmake_install.cmake
xcode_build/JUCE/tools/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
xcode_build/JUCE/tools/JUCE.xcodeproj/: project.pbxproj
xcode_build/JUCE/tools/modules/: cmake_install.cmake
(+7 files in other folders)
